<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:text="@string/location_name_label" />
    <EditText
        android:id="@+id/location_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="auto"
        android:inputType="text"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/coordinates_label"
        android:text="Coordinates"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/coordinates"
        android:hint="@string/coordinates_hint"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forecast_url_label"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:text="@string/forecast_url" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forecast_url"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:hint="@string/forecast_url"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/forecast_hourly_url_label"
        android:text="@string/forecast_hourly_url"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forecast_hourly_url"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:hint="@string/forecast_hourly_url" />
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/is_default"
        android:id="@+id/is_default"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Refresh"
        android:id="@+id/refresh_button"
        android:layout_marginTop="64dp"
        android:layout_marginHorizontal="32dp"
        style="@style/ShapeAppearanceOverlay.Material3.Button"
        />

</LinearLayout>